--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=Tienda
 server.port=8080
+
+#Para definir el formato de fecha/hora para el log
 logging.pattern.dateformat=hh.mm
+
+#Para eliminar el banner se puede usar el siguiente código
 spring.main.banner-mode=off
 
 
