--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #nombre del servidor para enviar el correo
 servidor.http=localhost
+
+logging.level.org.springframework.security=DEBUG
